# hue-audio-listener

./: .env.example  AGENTS.md  examples.http  openapi.yaml  pyproject.toml
docs/: API_CONTEXT.md
src/hue_audio_listener/: api_client.py  clap_detector.py  clap_service.py  cli.py  config.py
tests/: conftest.py  test_api_client.py  test_clap_detector.py  test_clap_service.py  test_cli.py  test_config.py
