[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hue-audio-listener"
version = "0.1.0"
description = "Audio client for clap-based control of hue-local-api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.scripts]
hue-audio-listener = "hue_audio_listener.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
